--- a/.github/workflows/template-hello.yaml
+++ b/.github/workflows/template-hello.yaml
@@ -11,9 +11,17 @@ on:
 jobs:
   init:
     runs-on: ubuntu-latest
+    outputs:
+      greetings: ${{ steps.gr33t.outputs.greetings }}
     steps:
       - name: This is Init
         run: echo "zzz... getting ready..."
+
+      - name: Set output
+        id: gr33t
+        run: echo "::set-output greetings=Hello ${{ inputs.name }}"
+
+
 
   hello:
     runs-on: ubuntu-latest
@@ -30,6 +38,17 @@ jobs:
     runs-on: ubuntu-latest
     needs: init
     if: ${{ inputs.name == 'if' }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Hello World
+        run: echo "Hello, ${{ inputs.name }}!"
+
+  hello-if-output:
+    runs-on: ubuntu-latest
+    needs: init
+    if: ${{ needs.init.outputs.greetings == 'Hello if' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
