Fix input reference in GitHub Actions workflow for greeting functionality

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,5 +12,5 @@ jobs:
   build:
     uses: ./.github/workflows/template-hello.yaml
     with:
-      name: ${{ github.inputs.name }}
+      name: ${{ github.event.inputs.name }}
     
