--- a/.github/workflows/template-hello.yaml
+++ b/.github/workflows/template-hello.yaml
@@ -53,3 +53,10 @@ jobs:
 
       - name: Hello World
         run: echo "Hello, ${{ inputs.name }}!"
+
+  debug-init:
+    runs-on: ubuntu-latest
+    needs: init
+    steps:
+      - name: Hello World
+        run: echo "${{ needs.init.outputs.greetings }}"
