Update output setting in GitHub Actions workflow to use GITHUB_OUTPUT

--- a/.github/workflows/template-hello.yaml
+++ b/.github/workflows/template-hello.yaml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Set output
         id: gr33t
-        run: echo "::set-output greetings=Hello ${{ inputs.name }}"
+        run: echo "greetings=Hello ${{ inputs.name }}" >> $GITHUB_OUTPUT
 
   hello:
     runs-on: ubuntu-latest
