--- a/.github/workflows/template-hello.yaml
+++ b/.github/workflows/template-hello.yaml
@@ -35,7 +35,7 @@ jobs:
   hello-if:
     runs-on: ubuntu-latest
     needs: init
-    if: inputs.name == 'if'
+    if: ${{ inputs.name == 'if' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -46,7 +46,7 @@ jobs:
   hello-if-output:
     runs-on: ubuntu-latest
     needs: init
-    if: needs.init.outputs.greetings == 'Hello if'
+    if: ${{ needs.init.outputs.greetings == 'Hello if' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
